# LABORATORIO-ALGORITMIA

./: CMakeLists.txt  README.md
Testes/: Screenshots.md
bot/: acessar_estadoBot.c  acessar_estadoBot.h  auxiliaresBot.c  auxiliaresBot.h  dados.c  dados.h  interfaceBot.c  interfaceBot.h  ioBot.c  ioBot.h  logicaBot.c  logicaBot.h  main.c  modificar_estadoBot.c  modificar_estadoBot.h
doc/: _c_make_c_compiler_id_8c.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _c_make_cache_8txt.xml  _c_make_lists_8txt.xml  _r_e_a_d_m_e_8md.xml  _screenshots_8md.xml  acessar__estado_8c.xml  acessar__estado_8h.xml  acessar__estado_bot_8c.xml  acessar__estado_bot_8h.xml  auxiliares_8c.xml  auxiliares_8h.xml  auxiliares_bot_8c.xml  auxiliares_bot_8h.xml  bot_2dados_8c.xml  bot_2dados_8h.xml  bot_2main_8c.xml  clion-environment_8txt.xml  clion-log_8txt.xml  dir_0083d52db36387d6b31b7c4e9bb5d065.xml  dir_202b04bf6355ea5b17ff86a6f099e40a.xml  dir_4d166158345729d25a65c5396e5c1046.xml  dir_5504da1a61fd5271dfb1a14e1ad5f38f.xml  dir_614852d75b75709ec9f7ed4501ce0aad.xml  dir_69b8ad8ed5622128771a3bff81c85727.xml  dir_7027cb3a4377cc0c76a329640954fedb.xml  dir_790e97637443ff66e26cb5e5bd9a1c69.xml  dir_7d5e78a23f6ec1532ea7a383af1dad4b.xml  dir_82504bd364e02c3e339748e76f9ab940.xml  dir_866ea1e5214a60f418011dbb0a3195a3.xml  dir_92522685d1921b3654e836376518cd97.xml  dir_938b764780631b4973039ca5ff92f774.xml  dir_a1c43799513e300f48ff582e7b288c99.xml  dir_b44ecdb77f2313e87fab910254ef2ab7.xml  dir_b5601738de05d2c8d35ae42945327b31.xml  dir_e7db185fed780a7615fd18b9ecf7edd9.xml  group___beta.xml  (+61 more)
listas/: lista.c  (+2 more)
(+17 files in other folders)
